--- a/ap-csp-create-task/styles/style.css
+++ b/ap-csp-create-task/styles/style.css
@@ -1,3 +1,5 @@
+@import url(agent.css);
+
 html,
 body,
 * {
@@ -76,16 +78,8 @@ body {
   margin: 1rem auto;
   border: solid 0.5rem var(--secondary);
   border-radius: 3rem;
-  background: linear-gradient(
-    -45deg,
-    #89f476ff,
-    #347334ff,
-    #2c4f5eff,
-    #493a7cff
-  );
-  background-size: 200% 200%;
-  animation: gradient 10s ease infinite;
   height: 100%;
+  animation: gradient 10s ease infinite;
 }
 @keyframes gradient {
   0% {
