--- a/ap-csp-create-task/styles/style.css
+++ b/ap-csp-create-task/styles/style.css
@@ -36,6 +36,7 @@ body,
 h1 {
   font-size: var(--h1);
   color: var(--tertiary);
+  margin-bottom: 1rem;
 }
 h2 {
   font-size: var(--h2);
@@ -63,7 +64,7 @@ body {
   background-color: var(--primary);
 }
 .display {
-  margin: 5rem auto;
+  margin: 4rem auto;
   height: 60rem;
   width: 70rem;
   border: solid 1rem var(--secondary);
@@ -96,7 +97,7 @@ button,
 button:link,
 button:visited {
   font-size: var(--h3);
-  margin: 2rem 2rem;
+  margin: 1rem 2rem;
   width: 35rem;
   height: 7rem;
   justify-content: space-around;
@@ -112,4 +113,10 @@ button:visited {
 button:hover {
   transform: translateY(-2px);
   box-shadow: 0 10px 1rem rgba(0, 0, 0, 0.2);
+}
+#instructions-btn {
+  width: 50rem;
+  height: 4rem;
+  font-size: var(--h4);
+  margin-bottom: 0rem;
 }
